<resources>
    <string name="app_name">UnString</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="log_into_your_account">Log into your account</string>
</resources>
